--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,12 +5,12 @@ node {
      sh "git rev-parse --short HEAD > .git/commit-id"                        
      gitcommit = readFile('.git/commit-id').trim()
    }
-   stage('test') {
+   /*stage('test') {
      nodejs(nodeJSInstallationName: 'nodejs') {
        sh 'npm install --only=dev'
        sh 'npm test'
      }
-   }
+   }*/
    stage('Credenciales') {
      steps{
      sh echo 'credenciales'
