--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ node {
       }
    }
    stage('Docker Build & Push') {
-     docker.withRegistry('https://login.docker.com', 'docker') {
+     docker.withRegistry('https://registry.hub.docker.com', 'docker') {
       def nuestraapp = docker.build("lwettell/nodejsapp:${gitcommit}", ".")
       nuestraapp.push()
      }
